[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name =  "rflow"
description = "A rectified flow implementation in Flax"
authors = [{name = "Simon Dirmeier", email = "sfyrbnd@pm.me"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = []
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
    "flax>=0.8.5",
    "optax>=0.2.3",
    "ml_collections>=0.1.1",
    "jax>=0.4.31",
    "tensorflow>=2.17.0",
    "tensorflow-datasets>=4.9.6",
    "tensorflow-probability[jax]>=0.24.0",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/dirmeier/rflow"

[tool.rye]
managed = true
dev-dependencies = [
    "matplotlib>=3.9.2",
    "pre-commit>=3.8.0",
]

[tool.setuptools]
packages = ["rflow"]

[tool.setuptools.dynamic]
version = {attr = "rflow.__init__.__version__"}

[tool.bandit]
skips = ["B101"]

[tool.ruff]
line-length = 120
exclude = ["*_test.py", "docs/**", "examples/**"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = [
  "UP", "I", "PL", "S"
]
ignore = ["S301", "PLR0913", "S101", "PLR2004", "S603", "S607"]

[tool.ruff.lint.pydocstyle]
convention= 'google'
